@@ -1,6 +1,7 @@
 CHANGES IN VERSION 2.0.16
 -------------------------
     o Minor bug fix in extractSignatures. Issue #369
+    o Added argument ens2hugo to annovarToMaf. Issue #372
 
 CHANGES IN VERSION 2.0.15
 -------------------------
